# assessment-generator

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.vercel/: project.json
api/: index.py
assessment_engine/: __main__.py  api.py  config.py  docx_builder.py  llm.py  orchestrator.py  parser.py  prompt.py  validator.py
assessment_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: index.html
tests/: test_api.py  test_engine.py
